# corbell

./: README.md  corbell-overview-feedback.md  launch-corbell.bat  pyproject.toml
corbell/cli/: main.py
corbell/cli/commands/: export.py
corbell/core/: workspace.py
tests/: test_workspace.py
